--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "ConexaoMySQL": "server=localhost;port=3306;database=livraria_sql;user=root;password=;Persist Security Info=False; Connect Timeout=60"
+    "ConexaoMySQL":
+    "server=localhost;port=3306;database=livraria_sql;user=root;password=;Persist Security Info=False; Connect Timeout=60"
   },
   "Logging": {
     "LogLevel": {
